# chaum-pedersen-auth

./: .gitignore  Makefile  README.md  zkp_auth.proto
client/: Cargo.toml  Makefile  Trunk.toml  build.rs  index.html
client/assets/: style.scss
client/scripts/: entry.sh
client/src/: main.rs  protocol.rs
client/src/components/: app.rs  exp_login.rs  k256_login.rs  mod.rs
docker/: Dockerfile  Dockerfile.client  Dockerfile.service  docker-compose.yml
protocol/: Cargo.toml
scripts/: ecpoc.py  generators.py  primes.py  pyproject.toml  secret.py  solve.py
service/: Cargo.toml  build.rs  zkp_auth.proto
service/scripts/: entry.sh
service/src/: main.rs  protocol.rs
{{ service_name }}/scripts/: entry.sh
