[package]
name = "chaum-pedersen-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
eyre = "0.6.8"
grpc-web-client = "0.1.2"
leptonic = { git = "https://github.com/lpotthast/leptonic.git" }
leptos = { version = "0.4.10", features = ["csr"] }
log = "0.4.20"
num-bigint = "0.4.4"
prost = "0.11.9"
rand = "0.8.5"
web-sys = "0.3.64"
tonic = { version = "0.9.2", default-features = false, features = ["codegen", "prost"] }
tonic-web-wasm-client = "0.4.0"
k256 = "0.13.1"

[build-dependencies]
leptonic-theme = { git = "https://github.com/lpotthast/leptonic.git" }
leptos-tiptap-build = "0.2.2"
tonic-build = { version = "0.9.2", default-features = false, features = ["prost"] }
