[package]
name = "chaum-pedersen-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
prost = "0.12.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.10.0"
tonic-health = "0.10.0"
tonic-reflection = "0.10.0"

[build-dependencies]
tonic-build = "0.10.0"
