[package]
name = "chaum-pedersen-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
eyre = "0.6.8"
http = "0.2.9"
log = "0.4.20"
num-bigint = "0.4.4"
prost = "0.12.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.10.0"
tonic-health = "0.10.0"
tonic-reflection = "0.10.0"
tonic-web = "0.10.0"
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10.0"
